# ID_CA_Acc

./: README.md  script.py  setup.cfg  setup.py
.github/workflows/: build.yml
src/idca/: __main__.py  script.py
