[metadata]
name = idca
version = 0.1.0
author = Anjan Babu
author_email = anjan@anjanandco.com
description = Custom script to run data extraction
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Anjanbabu123/ID_CA_Acc
project_urls =
    Bug Tracker = https://github.com/Anjanbabu123/ID_CA_Acc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    pandas
    xlrd
    openpyxl

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    mypy
all =
    %(dev)s

[options.entry_points]
console_scripts =
    run = idca.__main__:main